JBTM-3091 Depend on a MP-LRA snapshot build (including updates to match the latest API changes)